force-app/main/default/objects/Account/fields/Re_Seller_Cert_Status__c.field-meta.xml
<CustomField>
    <fullName>Re_Seller_Cert_Status__c</fullName>
    <label>Re-Seller Cert. Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active-Enrolled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>