force-app/main/default/objects/Account/fields/Record_Type_Account__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Account__c</fullName>
    <formula>if( RecordTypeId = &quot;01212000000oF7n&quot;,true,false)</formula>
    <label>Record Type Account</label>
    <type>Checkbox</type>
</CustomField>