force-app/main/default/objects/Account/fields/Recruiting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Campaign__c</fullName>
    <inlineHelpText>Sales prospecting and recruiting campaign set by management for tracking on monthly basis</inlineHelpText>
    <label>Recruiting Campaign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>