force-app/main/default/objects/Account/fields/Red_carpet__c.field-meta.xml
<CustomField>
    <fullName>Red_carpet__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>Red carpet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>