force-app/main/default/objects/Account/fields/Regular_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Regular_Pricelist__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>Regular Pricelist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>