force-app/main/default/objects/Account/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <description>for rejection approval processes</description>
    <label>Rejection Notes</label>
    <type>TextArea</type>
</CustomField>