force-app/main/default/objects/Account/fields/Reseller_Certification_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Certification_Expiration_Date__c</fullName>
    <label>Reseller Certification Expiration Date</label>
    <type>Date</type>
</CustomField>