force-app/main/default/objects/Account/fields/Reseller_Direct__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Direct</label>
    <type>Checkbox</type>
</CustomField>