force-app/main/default/objects/Account/fields/Reseller_Open_Spa_Report__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Open_Spa_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://viewsonic.lightning.force.com/lightning/r/Report/00O1H000007hbKxUAI/view?fv3=&apos;&amp;Name, &apos;Click Here for Open Spa Report&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Open Spa Report</label>
    <type>Text</type>
</CustomField>