force-app/main/default/objects/Account/fields/Reseller_POS_CQ__c.field-meta.xml
<CustomField>
    <fullName>Reseller_POS_CQ__c</fullName>
    <label>Reseller POS CQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>