force-app/main/default/objects/Account/fields/Reseller_POS_CY__c.field-meta.xml
<CustomField>
    <fullName>Reseller_POS_CY__c</fullName>
    <label>Reseller POS CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>