force-app/main/default/objects/Account/fields/Reseller_Tier_Override__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Tier_Override__c</fullName>
    <label>Reseller Tier Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>