force-app/main/default/objects/Account/fields/Reseller_Tier_Portal__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Tier_Portal__c</fullName>
    <description>Partner Tiers for the Partner Portal This is not the Hierarchical Field on the page layout</description>
    <formula>if(AV_Solutions_Partner__c == true, &apos;AV Solutions&apos;,
if(not(isblank(text(Reseller_Tier_Override__c))),  text(Reseller_Tier_Override__c),
if(POS_PY__c &gt; 999999 || POS_CY__c &gt; 999999 , &apos;Elite&apos;,
if(POS_PY__c &gt; 99999 || POS_CY__c &gt; 99999 , &apos;Premium&apos;,
&apos;Preferred&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Tier Partner Portal</label>
    <type>Text</type>
</CustomField>