force-app/main/default/objects/Account/fields/Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Type__c</fullName>
    <formula>if(text(Type) = &quot;NSP&quot;, &quot;National&quot;,text(Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Type</label>
    <type>Text</type>
</CustomField>