force-app/main/default/objects/Account/fields/Revenue_CQ__c.field-meta.xml
<CustomField>
    <fullName>Revenue_CQ__c</fullName>
    <label>Revenue_CQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>