force-app/main/default/objects/Account/fields/Revenue_CY__c.field-meta.xml
<CustomField>
    <fullName>Revenue_CY__c</fullName>
    <label>Revenue_CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>