force-app/main/default/objects/Account/fields/Revenue_PQ__c.field-meta.xml
<CustomField>
    <fullName>Revenue_PQ__c</fullName>
    <label>Revenue_PQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>