force-app/main/default/objects/Account/fields/Revenue_PY__c.field-meta.xml
<CustomField>
    <fullName>Revenue_PY__c</fullName>
    <label>Revenue_PY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>