force-app/main/default/objects/Account/fields/RunTerritoryRules__c.field-meta.xml
<CustomField>
    <fullName>RunTerritoryRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RunTerritoryRules</label>
    <type>Checkbox</type>
</CustomField>