force-app/main/default/objects/Account/fields/Sales_Notification__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The amount of sale threshold based on metadata info</description>
    <label>SerialSales Notification</label>
    <type>Checkbox</type>
</CustomField>