force-app/main/default/objects/Account/fields/SalesRevCurrent_Week__c.field-meta.xml
<CustomField>
    <fullName>SalesRevCurrent_Week__c</fullName>
    <description>if sales for current week pos week, which starts on Fridaty, there will be the Reveue amount.</description>
    <label>SerialSalesRevRecentSale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>