force-app/main/default/objects/Account/fields/Same_As_Billing__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address Same As Billing Address</label>
    <type>Checkbox</type>
</CustomField>