force-app/main/default/objects/Account/fields/SchoolId__c.field-meta.xml
<CustomField>
    <fullName>SchoolId__c</fullName>
    <externalId>true</externalId>
    <label>NCES School ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>