force-app/main/default/objects/Account/fields/Sell_Out_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Sell_Out_Reporter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sell Out Reporter</label>
    <type>Checkbox</type>
</CustomField>