force-app/main/default/objects/Account/fields/Selling_Methods__c.field-meta.xml
<CustomField>
    <fullName>Selling_Methods__c</fullName>
    <label>Selling Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Method 1</fullName>
            </value>
            <value>
                <fullName>Method 2</fullName>
            </value>
            <value>
                <fullName>Method 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>