force-app/main/default/objects/Account/fields/Send_VAR_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_VAR_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VAR Emails</label>
    <type>Checkbox</type>
</CustomField>