force-app/main/default/objects/Account/fields/Smart__c.field-meta.xml
<CustomField>
    <fullName>Smart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart</label>
    <type>Checkbox</type>
</CustomField>