force-app/main/default/objects/Account/fields/Software_Being_Used__c.field-meta.xml
<CustomField>
    <fullName>Software_Being_Used__c</fullName>
    <label>IT Software Being Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_Being_Used</valueSetName>
    </valueSet>
</CustomField>