force-app/main/default/objects/Account/fields/SPA_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SPA_Account_Name__c</fullName>
    <label>SPA Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>