force-app/main/default/objects/Account/fields/Spa_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Spa_Email_List__c</fullName>
    <label>Spa Email List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>