force-app/main/default/objects/Account/fields/SSO_Type__c.field-meta.xml
<CustomField>
    <fullName>SSO_Type__c</fullName>
    <label>IT SSO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>SAML</fullName>
            </value>
            <value>
                <fullName>GSUITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>