force-app/main/default/objects/Account/fields/State_District_ID__c.field-meta.xml
<CustomField>
    <fullName>State_District_ID__c</fullName>
    <externalId>true</externalId>
    <label>State District ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>