force-app/main/default/objects/Account/fields/State_School_ID__c.field-meta.xml
<CustomField>
    <fullName>State_School_ID__c</fullName>
    <externalId>true</externalId>
    <label>State School ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>