force-app/main/default/objects/Account/fields/Stock_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Stock_Reporter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock Reporter</label>
    <type>Checkbox</type>
</CustomField>