force-app/main/default/objects/Account/fields/subindustry__c.field-meta.xml
<CustomField>
    <fullName>subindustry__c</fullName>
    <formula>if(text(Industry) = &apos;Education&apos; , &apos;K-12&apos;,if(text(Industry) = &apos;Education - Higher Education&apos;, upper(&apos;Higher Education&apos;),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subindustry</label>
    <type>Text</type>
</CustomField>