force-app/main/default/objects/Account/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <label>TAM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>