force-app/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enterprise uses target accounts for SIP to differentiate the focus , which expects revenue, from targets which looks at activiites</description>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>