force-app/main/default/objects/Account/fields/Technology_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technology_Notes__c</fullName>
    <label>myViewBoard Technology Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>