force-app/main/default/objects/Account/fields/TerritoryChange__c.field-meta.xml
<CustomField>
    <fullName>TerritoryChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes that the territory rules for this account have been changed and need to check ownership and team</description>
    <label>TerritoryChange</label>
    <type>Checkbox</type>
</CustomField>