force-app/main/default/objects/Account/fields/territoryOwner_Do_Not_Update__c.field-meta.xml
<CustomField>
    <fullName>territoryOwner_Do_Not_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>territoryOwner Do Not Update</label>
    <type>Checkbox</type>
</CustomField>