force-app/main/default/objects/Account/fields/Top_1000__c.field-meta.xml
<CustomField>
    <fullName>Top_1000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 1000</label>
    <type>Checkbox</type>
</CustomField>