force-app/main/default/objects/Account/fields/Total_Write_offs_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Write_offs_Last_12_Months__c</fullName>
    <label>Total Write offs Last 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>