force-app/main/default/objects/Account/fields/Transfer_Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Account_Ownership__c</fullName>
    <description>This field allows to tag an account for a specific rep that has left the company and we need to mass transfer these accounts to the new sales rep. Since we cannot always leave departed rep as owner due to Pardot emails, this solution allows the transfer of owners to a new owner and a tag to map to the new sales rep when they arrive</description>
    <label>Transfer Account Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>