force-app/main/default/objects/Account/fields/Transfer_to_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer to Sandbox</label>
    <type>Checkbox</type>
</CustomField>