force-app/main/default/objects/Account/fields/UNITID__c.field-meta.xml
<CustomField>
    <fullName>UNITID__c</fullName>
    <externalId>true</externalId>
    <label>UNITID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>