force-app/main/default/objects/Account/fields/updateTerritoryandOwner__c.field-meta.xml
<CustomField>
    <fullName>updateTerritoryandOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updateTerritoryandOwner</label>
    <type>Checkbox</type>
</CustomField>