force-app/main/default/objects/Account/fields/Upload_Id__c.field-meta.xml
<CustomField>
    <fullName>Upload_Id__c</fullName>
    <description>This is an external id for uploaded accounts. This is to better match imported accounts and potentially imported contacts to better match contacts with accounts</description>
    <externalId>true</externalId>
    <label>Upload Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>