force-app/main/default/objects/Account/fields/User_Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Sync_Type__c</fullName>
    <label>User Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CSV File - send to Rommel.Bugay@viewsonic.com</fullName>
            </value>
            <value>
                <fullName>Active Directory Sync</fullName>
            </value>
            <value>
                <fullName>GSuite sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>