force-app/main/default/objects/Account/fields/UserCode__c.field-meta.xml
<CustomField>
    <fullName>UserCode__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>UserCode</label>
    <type>AutoNumber</type>
</CustomField>