force-app/main/default/objects/Account/fields/VG2448_Free_Demo__c.field-meta.xml
<CustomField>
    <fullName>VG2448_Free_Demo__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>VG2448 Free Demo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>