force-app/main/default/objects/Account/fields/ViewBoard_Synced_Users__c.field-meta.xml
<CustomField>
    <fullName>ViewBoard_Synced_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViewBoard Synced Users</label>
    <type>Checkbox</type>
</CustomField>