force-app/main/default/objects/Account/fields/ViewSchool__c.field-meta.xml
<CustomField>
    <fullName>ViewSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this account is an educational based account and is a member of ViewSchool, check the box.

7.23 this is a deprecate candidate but this data may be useful for viewboard. Need to check before deleting</description>
    <label>ViewSchool</label>
    <type>Checkbox</type>
</CustomField>