force-app/main/default/objects/Account/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>VIP Member Number</label>
    <type>AutoNumber</type>
</CustomField>