force-app/main/default/objects/Account/fields/VIP_Hotline_Service__c.field-meta.xml
<CustomField>
    <fullName>VIP_Hotline_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Hotline Service</label>
    <type>Checkbox</type>
</CustomField>