force-app/main/default/objects/Account/fields/VIP_Hotline_Submitter__c.field-meta.xml
<CustomField>
    <fullName>VIP_Hotline_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIP/Hotline Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>