force-app/main/default/objects/Account/fields/VIP_in_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>VIP_in_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP in Approval Process</label>
    <type>Checkbox</type>
</CustomField>