force-app/main/default/objects/Account/fields/VIP_Products__c.field-meta.xml
<CustomField>
    <fullName>VIP_Products__c</fullName>
    <label>VIP Products</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>