force-app/main/default/objects/Account/fields/VIP_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>VIP_Request_Type__c</fullName>
    <inlineHelpText>VIP is express exchange with hotline. Hotline only is a phone number they will get to call for support.</inlineHelpText>
    <label>VIP Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP Gold</fullName>
            </value>
            <value>
                <fullName>Hotline Only</fullName>
            </value>
            <value>
                <fullName>VIP Express Exchange</fullName>
                <isActive>false</isActive>
                <label>VIP Express Exchange</label>
            </value>
            <value>
                <fullName>VIP Platinum</fullName>
                <isActive>false</isActive>
                <label>VIP Platinum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>