force-app/main/default/objects/Account/fields/VIP_Service_Account__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account or Child Account has a VIP service</description>
    <label>VIP Service Account</label>
    <type>Checkbox</type>
</CustomField>