force-app/main/default/objects/Account/fields/VIP_Service_Contact__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIP Service Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (VIP Service Contact)</relationshipLabel>
    <relationshipName>AccountsVIP</relationshipName>
    <type>Lookup</type>
</CustomField>