force-app/main/default/objects/Account/fields/VIP_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Contract__c</fullName>
    <formula>if( Parent.VIP_Service_Account__c = true ||     VIP_Service_Account__c = true   , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Service Contract</label>
    <type>Checkbox</type>
</CustomField>