force-app/main/default/objects/Account/fields/VIP_Service_Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Reason_for_Request__c</fullName>
    <label>VIP Service Reason for Request</label>
    <length>12000</length>
    <type>Html</type>
</CustomField>