force-app/main/default/objects/Account/fields/VIP_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VIP_Service_Start_Date__c</fullName>
    <label>VIP Service Start Date</label>
    <type>Date</type>
</CustomField>