force-app/main/default/objects/Account/fields/VipApprovalClearFields__c.field-meta.xml
<CustomField>
    <fullName>VipApprovalClearFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to trigger process builder to clear all fiellds...cannot do in process because some are lookup fields.</description>
    <label>VipApprovalClearFields</label>
    <type>Checkbox</type>
</CustomField>