force-app/main/default/objects/Account/fields/VipCandidate__c.field-meta.xml
<CustomField>
    <fullName>VipCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VipCandidate</label>
    <type>Checkbox</type>
</CustomField>