force-app/main/default/objects/Account/fields/VipContractType__c.field-meta.xml
<CustomField>
    <fullName>VipContractType__c</fullName>
    <label>VipContractType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>