force-app/main/default/objects/Account/fields/VIPEndDate__c.field-meta.xml
<CustomField>
    <fullName>VIPEndDate__c</fullName>
    <label>VIPEndDate</label>
    <type>Date</type>
</CustomField>