force-app/main/default/objects/Account/fields/VIPGoldAutoApprove__c.field-meta.xml
<CustomField>
    <fullName>VIPGoldAutoApprove__c</fullName>
    <formula>(CONTAINS(&apos;Education&apos;, text(Industry))
 &amp;&amp;  (POS_CY__c &gt; 100000 || POS_PY__c &gt; 100000))
|| POS_CY__c &gt; 200000 || POS_PY__c &gt; 200000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPGoldAutoApprove</label>
    <type>Checkbox</type>
</CustomField>