force-app/main/default/objects/Account/fields/VIPPlatinum__c.field-meta.xml
<CustomField>
    <fullName>VIPPlatinum__c</fullName>
    <formula>(CONTAINS(&apos;Education&apos;, text(Industry))
&amp;&amp; (POS_CY__c &gt; 250000 || POS_PY__c &gt; 250000))
|| POS_CY__c &gt; 500000 || POS_PY__c &gt; 500000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPPlatinum</label>
    <type>Checkbox</type>
</CustomField>