force-app/main/default/objects/Account/fields/VIPStartDate__c.field-meta.xml
<CustomField>
    <fullName>VIPStartDate__c</fullName>
    <label>VIPStartDate</label>
    <type>Date</type>
</CustomField>