force-app/main/default/objects/Account/fields/Weekly_Note__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Note__c</fullName>
    <label>Weekly Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>