force-app/main/default/objects/Account/fields/X_Stand__c.field-meta.xml
<CustomField>
    <fullName>X_Stand__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>X-Stand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>