force-app/main/default/objects/Account/recordTypes/Account_Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Account_Channel_Partner</fullName>
    <active>true</active>
    <label>VSA Channel Partner</label>
</RecordType>