force-app/main/default/objects/Account/recordTypes/Hidden.recordType-meta.xml
<RecordType>
    <fullName>Hidden</fullName>
    <active>true</active>
    <description>Hidden Accounts so that they can be removed later without immediately deleting.</description>
    <label>Hidden</label>
</RecordType>