force-app/main/default/objects/Account/recordTypes/Inactive.recordType-meta.xml
<RecordType>
    <fullName>Inactive</fullName>
    <active>false</active>
    <label>Inactive</label>
</RecordType>