force-app/main/default/objects/Account/recordTypes/VSA_Account_End_User.recordType-meta.xml
<RecordType>
    <fullName>VSA_Account_End_User</fullName>
    <active>true</active>
    <label>VSA Account End User</label>
</RecordType>