force-app/main/default/objects/Account/recordTypes/VSA_Latin_America.recordType-meta.xml
<RecordType>
    <fullName>VSA_Latin_America</fullName>
    <active>false</active>
    <label>VSA Latin America</label>
</RecordType>