force-app/main/default/objects/Account/recordTypes/VSE_I_Account_Dealer.recordType-meta.xml
<RecordType>
    <fullName>VSE_I_Account_Dealer</fullName>
    <active>true</active>
    <label>VSE/I Account Dealer</label>
</RecordType>