force-app/main/default/objects/Account/recordTypes/VSEI_Account_Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>VSEI_Account_Channel_Partner</fullName>
    <active>true</active>
    <description>Partner Account Created from VSE and VSI</description>
    <label>VSE/I Account Channel Partner</label>
</RecordType>