force-app/main/default/objects/Account/recordTypes/VSEI_Account_End_User.recordType-meta.xml
<RecordType>
    <fullName>VSEI_Account_End_User</fullName>
    <active>true</active>
    <label>VSE/I Account End User</label>
</RecordType>