force-app/main/default/objects/Account/validationRules/Account_Focus.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Focus</fullName>
    <active>false</active>
    <description>Disallows account name changes on focus accounts because it will affect reporting.</description>
    <errorConditionFormula>ischanged(Name) &amp;&amp; Focus_Account__c == true</errorConditionFormula>
    <errorMessage>You cannot change a focus account name</errorMessage>
</ValidationRule>