force-app/main/default/objects/Account/validationRules/Account_Name_Viewsonic.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Viewsonic</fullName>
    <active>true</active>
    <description>Ensures no other Viewsonic Accounts are created</description>
    <errorConditionFormula>and(isnew(),or(contains( lower(Name) ,&apos;viewsonic&apos;),contains( lower(Name) ,&apos;view sonic&apos;)),$User.Alias &lt;&gt; &apos;admin&apos;) &amp;&amp;  Apex_Test__c = false</errorConditionFormula>
    <errorMessage>Please do not create Viewsonic Accounts, If there is a business need for this account, please contact SFDC Admin</errorMessage>
</ValidationRule>