force-app/main/default/objects/Account/validationRules/Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type</fullName>
    <active>true</active>
    <description>&amp;&amp;text(VS_Region__c) == &apos;VSA&apos;</description>
    <errorConditionFormula>isblank(text(Type))&amp;&amp;text(VSRegion__c) == &apos;VSA&apos;</errorConditionFormula>
    <errorMessage>Accounts must have Account Types. Please Create an Account with an Account Type</errorMessage>
</ValidationRule>