force-app/main/default/objects/Account/validationRules/Account_VIP_Needs_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_VIP_Needs_Date</fullName>
    <active>false</active>
    <errorConditionFormula>(ischanged (VIP_Service_Contract__c) &amp;&amp; VIP_Service_Contract__c = true &amp;&amp;  (isblank(VIP_Service_Expiration_Date__c ) &amp;&amp; $User.Alias != &apos;admin&apos; )|| (VIP_Service_Expiration_Date__c &lt; today()) &amp;&amp; $User.Alias != &apos;admin&apos; &amp;&amp; VIP_Service_Contract__c = true)</errorConditionFormula>
    <errorMessage>VIP Service Accounts must have an expiration date in the future</errorMessage>
</ValidationRule>