force-app/main/default/objects/Account/validationRules/AV_Solutions_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>AV_Solutions_Accounts</fullName>
    <active>true</active>
    <errorConditionFormula>isnew() &amp;&amp;
 text(Industry) = &apos;AV Solution&apos; &amp;&amp;
 CreatedBy.Alias != &apos;RStra&apos;
 &amp;&amp;  CreatedBy.Alias != &apos;admin&apos; &amp;&amp;
 text(VSRegion__c ) = &apos;VSA&apos;</errorConditionFormula>
    <errorMessage>Please do not set to AV Solutions. This will be done by the AV Certification Team</errorMessage>
</ValidationRule>